Update dependencies
- gRPC 1.14.0 -> 1.15.0
- Brave 5.2.1 -> 5.3.1
- Tomcat 9.0.11 -> 9.0.12, 8.5.33 -> 8.5.34
- Hibernate Validator 6.0.12 -> 6.0.13
- Spring Boot 2.0.4 -> 2.0.5
- Build-time
  - Gradle 4.10 -> 4.10.1
  - AssertJ 3.11.0 -> 3.11.1
  - Mockito 2.21.0 -> 2.22.0
- Miscellaneous:
  - Removed the deprecated usage of `Class.newInstance()` which was
    deprecated since Java 9.